--- a/tallerJS_02/index.html
+++ b/tallerJS_02/index.html
@@ -360,6 +360,7 @@
     <script src="vista/js/popper.min.js"></script>
     <script src="vista/js/bootstrap.min.js"></script>
     <script src="vista/js/vista.js"></script>
+    <script src="modelo/ajax.js"></script>
     <script src="controlador/controlador.js"></script>
 </body>
 </html>
