--- a/tallerJS_02/index.html
+++ b/tallerJS_02/index.html
@@ -47,6 +47,23 @@
             <!-- FINAL CONTENIDOS DEL AREA DE TRABAJO -->
         </div>
     </div>
+
+    <!-- VENTANA MODAL ----------------------------------------------------------------->
+    <div class="modal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header"> <!-- Modal Header -->
+                    <h4 class="modal-title" id="modal-titulo"></h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body" id="modal-cuerpo"> <!-- Modal body -->
+                </div>
+                <div class="modal-footer"> <!-- Modal footer -->
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <!-- PLANTILLAS -------------------------------------------------------->
 
@@ -361,6 +378,7 @@
     <script src="vista/js/bootstrap.min.js"></script>
     <script src="vista/js/vista.js"></script>
     <script src="modelo/ajax.js"></script>
+    <script src="modelo/proveedor.js"></script>
     <script src="controlador/controlador.js"></script>
 </body>
 </html>
